--- a/CloudDocs/Views/Cells/AddPhotoButtonTableViewCell.xib
+++ b/CloudDocs/Views/Cells/AddPhotoButtonTableViewCell.xib
@@ -25,9 +25,7 @@
                         </constraints>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" title="Add photo of document">
-                            <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </buttonConfiguration>
+                        <buttonConfiguration key="configuration" style="plain"/>
                     </button>
                 </subviews>
                 <constraints>
