--- a/CloudDocs/Views/Base.lproj/Main.storyboard
+++ b/CloudDocs/Views/Base.lproj/Main.storyboard
@@ -781,7 +781,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Clf-s7-Iap"/>
+        <segue reference="5mu-xm-89z"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Account" width="170.5" height="170.5"/>
